--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react": "16.2.0",
     "react-native": "0.52.0",
     "react-native-keyboard-aware-scroll-view": "^0.5.0",
+    "react-native-message-bar": "^2.0.10",
     "react-native-searchbar": "^1.14.0",
     "react-native-vector-icons": "^4.5.0",
     "react-navigation": "^1.2.1"
