--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "expo": "^25.0.0",
     "react": "16.2.0",
     "react-native": "0.52.0",
+    "react-native-confirmation-code-input": "^1.0.4",
     "react-native-keyboard-aware-scroll-view": "^0.5.0",
     "react-native-message-bar": "^2.0.10",
     "react-native-searchbar": "^1.14.0",
