--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-native-message-bar": "^2.0.10",
     "react-native-searchbar": "^1.14.0",
     "react-native-vector-icons": "^4.5.0",
-    "react-navigation": "^1.2.1"
+    "react-navigation": "^1.2.1",
+    "react-timer-mixin": "^0.13.3"
   }
 }
